add full support board Asus N65U, add target for board CY-SWR1100

--- a/trunk/.config
+++ b/trunk/.config
@@ -1,17 +1,21 @@
-### Fixed
+### Fixed RT3883 (support only RT3883/RT3662)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
-### Linux kernel and toolchain
-#CONFIG_LINUXDIR=linux-2.6.21.x
-CONFIG_LINUXDIR=linux-3.0.x
-CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
+### Target ProductID (board select, fixed 7 symbols)
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
+#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
 
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
 CONFIG_FIRMWARE_ROOTFS_VER="2.8"
 CONFIG_FIRMWARE_BUILDS_VER="021"
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+
+### Linux kernel and toolchain
+#CONFIG_LINUXDIR=linux-2.6.21.x
+CONFIG_LINUXDIR=linux-3.0.x
+CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
 
 ### Build firmware with shared libs for tcpdump, minidlna, transmission.
 ### Enabled this feature increased firmware size
@@ -24,6 +28,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Disable GMAC2 (eth3) for Ethernet raeth.
 ### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
+### Only take effect for "RT-N56U" target.
 #CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
 
 ### Perform sstrip for decrease firmware size (~50KB)
@@ -32,14 +37,14 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Enable IPv6 (full support only for kernel 3.x yet)
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
+### Use L2TP client "rp-l2tp" instead of "xl2tpd"
+CONFIG_FIRMWARE_USE_RPL2TP=y
+
 ### Enable XFS filesystem support (only for kernel 3.x, add ~0.6MB)
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable HFS+ filesystem support (only for kernel 3.x, add ~0.1MB)
 CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
-
-### Use L2TP client "rp-l2tp" instead of "xl2tpd"
-CONFIG_FIRMWARE_USE_RPL2TP=y
 
 ### Select WebGUI (0=Ribbon Fixed, 1=ASUS Blue)
 CONFIG_FIRMWARE_WEBGUI=0
