--- a/trunk/configs/uClibc-0.9.33.2.config
+++ b/trunk/configs/uClibc-0.9.33.2.config
@@ -140,7 +140,7 @@ UCLIBC_HAS_BSD_ERR=y
 # UCLIBC_SV4_DEPRECATED is not set
 UCLIBC_HAS_REALTIME=y
 UCLIBC_HAS_ADVANCED_REALTIME=y
-# UCLIBC_HAS_EPOLL is not set
+UCLIBC_HAS_EPOLL=y
 UCLIBC_HAS_XATTR=y
 # UCLIBC_HAS_PROFILING is not set
 UCLIBC_HAS_CRYPT_IMPL=y
