--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -7,14 +7,25 @@ CFLAGS += -s -I. -I$(SHDIR) -I$(SHDIR)/include -I$(HTTPDIR)
 CFLAGS += $(if $(CONFIG_FIRMWARE_BUILDS_VER),-DFWBLDSTR=\"$(CONFIG_FIRMWARE_BUILDS_VER)\",)
 CFLAGS += $(if $(CONFIG_FIRMWARE_USE_RPL2TP),-DUSE_RPL2TP,)
 CFLAGS += $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
-CFLAGS += $(if $(CONFIG_RALINK_RT3883_3T3R),-DUSE_RT3883_3T3R,)
+CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
+CFLAGS += $(if $(CONFIG_RT3090_AP),-DUSE_RT3090_AP,)
+CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
+CFLAGS += $(if $(CONFIG_RTL8367_API_8367B),-DUSE_RTL8367_API_8367B,)
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N56U")
+CFLAGS += -DBOARD_N56U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N65U")
+CFLAGS += -DBOARD_N65U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
+CFLAGS += -DBOARD_SWR1100
+endif
+
 ifeq ($(KERNEL3X),y)
 CFLAGS += -DUSE_KERNEL3X
 endif
-
-# Disable/Enable WPS button event
-CFLAGS += -DWPS_EVENT
 
 # Disable/Enable ugly httpd_check
 CFLAGS += -DHTTPD_CHECK
@@ -25,7 +36,7 @@ CFLAGS += -DHTTPD_CHECK
 LDFLAGS += -L. -lm
 
 CFLAGS += -I$(USERDIR)/libdisk
-CFLAGS += -I$(USERDIR)/wireless_tools 
+CFLAGS += -I$(USERDIR)/wireless_tools
 
 LDFLAGS += -L$(USERDIR)/libdisk -ldisk
 LDFLAGS += -L$(USERDIR)/wireless_tools -liw
