--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -5,7 +5,7 @@ TOP = $(ROOTDIR)/user
 INSTALL	= install
 IFLAGS  = -idirafter dummyinc
 
-CFLAGS	+= -Wall -Os -W -Wshadow
+CFLAGS	+= -Wall -O2 -W -Wshadow
 CFLAGS  += -I$(TOP)/shared -I$(TOP)/shared/include
 CFLAGS	+= -I$(TOP)/libdisk
 CFLAGS	+= -ffunction-sections -fdata-sections
