--- a/trunk/configs/IPv4/RT-N56U/kernel-2.6.21.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-2.6.21.x.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.21.17
-# Mon Aug 13 03:24:54 2012
+# Mon Aug 13 03:18:38 2012
 #
 CONFIG_MIPS=y
 
@@ -283,7 +283,7 @@ CONFIG_SYN_COOKIES=y
 # CONFIG_INET_ESP is not set
 # CONFIG_INET_IPCOMP is not set
 # CONFIG_INET_XFRM_TUNNEL is not set
-CONFIG_INET_TUNNEL=y
+# CONFIG_INET_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_TRANSPORT is not set
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
@@ -297,24 +297,9 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 # IP: Virtual Server Configuration
 #
 # CONFIG_IP_VS is not set
-CONFIG_IPV6=y
-CONFIG_IPV6_PRIVACY=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-# CONFIG_INET6_AH is not set
-# CONFIG_INET6_ESP is not set
-# CONFIG_INET6_IPCOMP is not set
+# CONFIG_IPV6 is not set
 # CONFIG_INET6_XFRM_TUNNEL is not set
 # CONFIG_INET6_TUNNEL is not set
-# CONFIG_INET6_XFRM_MODE_TRANSPORT is not set
-# CONFIG_INET6_XFRM_MODE_TUNNEL is not set
-# CONFIG_INET6_XFRM_MODE_BEET is not set
-# CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION is not set
-CONFIG_IPV6_SIT=y
-CONFIG_IPV6_NDISC_NODETYPE=y
-CONFIG_IPV6_SIT_6RD=y
-# CONFIG_IPV6_TUNNEL is not set
-# CONFIG_IPV6_MULTIPLE_TABLES is not set
 CONFIG_NET_SFHASH=y
 # CONFIG_NETWORK_SECMARK is not set
 CONFIG_NETFILTER=y
@@ -435,29 +420,6 @@ CONFIG_IP_NF_MATCH_CONNLIMIT=y
 # CONFIG_IP_NF_EGG is not set
 
 #
-# IPv6: Netfilter Configuration
-#
-CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
-CONFIG_IP6_NF_IPTABLES=y
-CONFIG_IP6_NF_MATCH_RT=y
-# CONFIG_IP6_NF_MATCH_OPTS is not set
-# CONFIG_IP6_NF_MATCH_FRAG is not set
-# CONFIG_IP6_NF_MATCH_HL is not set
-# CONFIG_IP6_NF_MATCH_OWNER is not set
-# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
-# CONFIG_IP6_NF_MATCH_AH is not set
-# CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_EUI64 is not set
-CONFIG_IP6_NF_FILTER=y
-CONFIG_IP6_NF_TARGET_LOG=y
-CONFIG_IP6_NF_TARGET_REJECT=y
-# CONFIG_IP6_NF_TARGET_IMQ is not set
-CONFIG_IP6_NF_MANGLE=m
-CONFIG_IP6_NF_TARGET_HL=m
-# CONFIG_IP6_NF_RAW is not set
-
-#
 # Bridge: Netfilter Configuration
 #
 CONFIG_BRIDGE_NF_EBTABLES=m
@@ -468,7 +430,6 @@ CONFIG_BRIDGE_EBT_T_FILTER=m
 # CONFIG_BRIDGE_EBT_AMONG is not set
 # CONFIG_BRIDGE_EBT_ARP is not set
 # CONFIG_BRIDGE_EBT_IP is not set
-# CONFIG_BRIDGE_EBT_IP6 is not set
 # CONFIG_BRIDGE_EBT_LIMIT is not set
 # CONFIG_BRIDGE_EBT_MARK is not set
 # CONFIG_BRIDGE_EBT_PKTTYPE is not set
@@ -1686,7 +1647,7 @@ CONFIG_RT2860V2_AP_DLS=y
 # CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 # CONFIG_RT2860V2_AP_GREENAP is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-CONFIG_RT2860V2_AP_VIDEO_TURBINE=y
+# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 CONFIG_RT2860V2_AP_INTELLIGENT_RATE_ADAPTION=y
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
@@ -1760,7 +1721,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
