--- a/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.21.17
-# Mon Aug 13 03:34:08 2012
+# Mon Aug 13 03:24:54 2012
 #
 CONFIG_MIPS=y
 
@@ -31,8 +31,6 @@ CONFIG_PCIE_ONLY=y
 CONFIG_RT2880_DRAM_128M=y
 # CONFIG_RAM_SIZE_AUTO is not set
 CONFIG_RALINK_RAM_SIZE=128
-CONFIG_BLK_DEV_RAM_SIZE=8192
-CONFIG_LZMARAMFS=y
 # CONFIG_KERNEL_NVRAM is not set
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
 # CONFIG_ARCH_HAS_ILOG2_U32 is not set
@@ -154,16 +152,11 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_IKCONFIG is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
-CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../romfs"
-CONFIG_INITRAMFS_ROOT_UID=0
-CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_LZMA_COMPRESS_LEVEL=27
 CONFIG_SYSCTL=y
 CONFIG_EMBEDDED=y
 CONFIG_SYSCTL_SYSCALL=y
-CONFIG_KALLSYMS=y
-# CONFIG_KALLSYMS_EXTRA_PASS is not set
+# CONFIG_KALLSYMS is not set
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK_FUNC=y
@@ -689,8 +682,9 @@ CONFIG_RT2880_FLASH_8M=y
 # CONFIG_RT2880_FLASH_16M is not set
 # CONFIG_DUAL_IMAGE is not set
 CONFIG_MTD_PHYSMAP_BUSWIDTH=2
-CONFIG_RT2880_ROOTFS_IN_RAM=y
-# CONFIG_RT2880_ROOTFS_IN_FLASH is not set
+# CONFIG_RT2880_ROOTFS_IN_RAM is not set
+CONFIG_RT2880_ROOTFS_IN_FLASH=y
+CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
 
 #
 # Parallel port support
@@ -714,9 +708,6 @@ CONFIG_BLK_DEV_LOOP=y
 # CONFIG_BLK_DEV_NBD is not set
 # CONFIG_BLK_DEV_SX8 is not set
 # CONFIG_BLK_DEV_UB is not set
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_COUNT=16
-CONFIG_BLK_DEV_RAM_BLOCKSIZE=1024
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
 
@@ -1446,7 +1437,10 @@ CONFIG_CONFIGFS_FS=y
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
-# CONFIG_SQUASHFS is not set
+CONFIG_SQUASHFS=y
+CONFIG_SQUASHFS_EMBEDDED=y
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
+# CONFIG_SQUASHFS_NOERROR is not set
 # CONFIG_VXFS_FS is not set
 # CONFIG_HPFS_FS is not set
 # CONFIG_QNX4FS_FS is not set
@@ -1557,7 +1551,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_LOG_BUF_SHIFT=14
 CONFIG_FORCED_INLINING=y
 CONFIG_CROSSCOMPILE=y
-CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/ram0"
+CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 ro"
 # CONFIG_UBOOT_CMDLINE is not set
 
 #
@@ -1617,6 +1611,7 @@ CONFIG_CRC_CCITT=y
 # CONFIG_CRC16 is not set
 CONFIG_CRC32=y
 # CONFIG_LIBCRC32C is not set
+CONFIG_ZLIB_INFLATE=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=m
 CONFIG_TEXTSEARCH_BM=m
@@ -1629,7 +1624,7 @@ CONFIG_HAS_DMA=y
 #
 # Ralink Module
 #
-CONFIG_RT_FULL_DEVICE_NAME="Asus RT-N56U"
+CONFIG_RT_FULL_DEVICE_NAME="RT-N56U"
 # CONFIG_RALINK_RDM is not set
 
 #
@@ -1691,7 +1686,7 @@ CONFIG_RT2860V2_AP_DLS=y
 # CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 # CONFIG_RT2860V2_AP_GREENAP is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-CONFIG_RT2860V2_AP_VIDEO_TURBINE=y
+# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 CONFIG_RT2860V2_AP_INTELLIGENT_RATE_ADAPTION=y
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
@@ -1701,7 +1696,7 @@ CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT2860V2_AP_BRIDGE_FASTPATH=y
 # CONFIG_RT2860V2_AP_ATE is not set
-CONFIG_RALINK_RT2860V2_AP_DBG=y
+# CONFIG_RALINK_RT2860V2_AP_DBG is not set
 
 #
 # STA/Client MODE Ralink RT3xx/RT28xx wireless driver
@@ -1728,7 +1723,7 @@ CONFIG_RT3090_AP_MCAST_RATE_SPECIFIC=y
 CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT3090_AP_BRIDGE_FASTPATH=y
 # CONFIG_RT3090_AP_ATE is not set
-CONFIG_RALINK_RT3090_AP_DBG=y
+# CONFIG_RALINK_RT3090_AP_DBG is not set
 
 #
 # NAT acell mode
