--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.46 Kernel Configuration
+# Linux/mips 3.0.50 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -67,6 +67,9 @@ CONFIG_PCIE_ONLY=y
 # CONFIG_RT2880_DRAM_64M is not set
 CONFIG_RT2880_DRAM_128M=y
 CONFIG_RALINK_RAM_SIZE=128
+# CONFIG_RT2880_UART_57600 is not set
+CONFIG_RT2880_UART_115200=y
+CONFIG_RALINK_UART_BRATE=115200
 # CONFIG_RALINK_TIMER_DFS is not set
 # CONFIG_ALCHEMY_GPIO_INDIRECT is not set
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
@@ -202,17 +205,7 @@ CONFIG_LOG_BUF_SHIFT=14
 CONFIG_SYSFS_DEPRECATED=y
 CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_RELAY is not set
-CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../romfs"
-CONFIG_INITRAMFS_ROOT_UID=0
-CONFIG_INITRAMFS_ROOT_GID=0
-# CONFIG_RD_GZIP is not set
-# CONFIG_RD_BZIP2 is not set
-CONFIG_RD_LZMA=y
-# CONFIG_RD_XZ is not set
-# CONFIG_RD_LZO is not set
-# CONFIG_INITRAMFS_COMPRESSION_NONE is not set
-CONFIG_INITRAMFS_COMPRESSION_LZMA=y
+# CONFIG_BLK_DEV_INITRD is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -226,7 +219,7 @@ CONFIG_BUG=y
 # CONFIG_PCSPKR_PLATFORM is not set
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
-# CONFIG_EPOLL is not set
+CONFIG_EPOLL=y
 CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
@@ -246,7 +239,7 @@ CONFIG_TINY=y
 # CONFIG_ETHTOOL is not set
 CONFIG_MAX_SWAPFILES_SHIFT=0
 CONFIG_MAX_USER_RT_PRIO=100
-# CONFIG_PCI_QUIRKS is not set
+CONFIG_PCI_QUIRKS=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SLAB=y
 # CONFIG_SLUB is not set
@@ -329,7 +322,9 @@ CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_DISABLE_COMMON_QUIRKS=y
 # CONFIG_PCI_IOV is not set
 CONFIG_PCIEPORTBUS=y
-# CONFIG_PCIEAER is not set
+CONFIG_PCIEAER=y
+# CONFIG_PCIE_ECRC is not set
+# CONFIG_PCIEAER_INJECT is not set
 # CONFIG_PCIEASPM is not set
 CONFIG_MMU=y
 # CONFIG_PCCARD is not set
@@ -376,7 +371,7 @@ CONFIG_SYN_COOKIES=y
 # CONFIG_INET_ESP is not set
 # CONFIG_INET_IPCOMP is not set
 # CONFIG_INET_XFRM_TUNNEL is not set
-# CONFIG_INET_TUNNEL is not set
+CONFIG_INET_TUNNEL=y
 # CONFIG_INET_XFRM_MODE_TRANSPORT is not set
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
@@ -387,7 +382,30 @@ CONFIG_IPSEC_NAT_TRAVERSAL=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
-# CONFIG_IPV6 is not set
+CONFIG_IPV6=y
+# CONFIG_IPV6_PRIVACY is not set
+CONFIG_IPV6_ROUTER_PREF=y
+# CONFIG_IPV6_ROUTE_INFO is not set
+# CONFIG_IPV6_OPTIMISTIC_DAD is not set
+# CONFIG_INET6_AH is not set
+# CONFIG_INET6_ESP is not set
+# CONFIG_INET6_IPCOMP is not set
+# CONFIG_IPV6_MIP6 is not set
+# CONFIG_INET6_XFRM_TUNNEL is not set
+# CONFIG_INET6_TUNNEL is not set
+# CONFIG_INET6_XFRM_MODE_TRANSPORT is not set
+# CONFIG_INET6_XFRM_MODE_TUNNEL is not set
+# CONFIG_INET6_XFRM_MODE_BEET is not set
+# CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION is not set
+CONFIG_IPV6_SIT=y
+CONFIG_IPV6_SIT_6RD=y
+CONFIG_IPV6_NDISC_NODETYPE=y
+# CONFIG_IPV6_TUNNEL is not set
+CONFIG_IPV6_MULTIPLE_TABLES=y
+# CONFIG_IPV6_SUBTREES is not set
+CONFIG_IPV6_MROUTE=y
+# CONFIG_IPV6_MROUTE_MULTIPLE_TABLES is not set
+# CONFIG_IPV6_PIMSM_V2 is not set
 # CONFIG_NETWORK_SECMARK is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
@@ -535,6 +553,28 @@ CONFIG_IP_NF_TARGET_TOS=m
 CONFIG_IP_NF_TARGET_TTL=m
 # CONFIG_IP_NF_RAW is not set
 # CONFIG_IP_NF_ARPTABLES is not set
+
+#
+# IPv6: Netfilter Configuration
+#
+CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_CONNTRACK_IPV6=y
+# CONFIG_IP6_NF_QUEUE is not set
+CONFIG_IP6_NF_IPTABLES=y
+# CONFIG_IP6_NF_MATCH_AH is not set
+# CONFIG_IP6_NF_MATCH_EUI64 is not set
+# CONFIG_IP6_NF_MATCH_FRAG is not set
+# CONFIG_IP6_NF_MATCH_OPTS is not set
+# CONFIG_IP6_NF_MATCH_HL is not set
+# CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
+# CONFIG_IP6_NF_MATCH_MH is not set
+CONFIG_IP6_NF_MATCH_RT=y
+CONFIG_IP6_NF_TARGET_HL=m
+CONFIG_IP6_NF_TARGET_LOG=y
+CONFIG_IP6_NF_FILTER=y
+CONFIG_IP6_NF_TARGET_REJECT=y
+CONFIG_IP6_NF_MANGLE=m
+# CONFIG_IP6_NF_RAW is not set
 CONFIG_BRIDGE_NF_EBTABLES=m
 # CONFIG_BRIDGE_EBT_BROUTE is not set
 CONFIG_BRIDGE_EBT_T_FILTER=m
@@ -543,6 +583,7 @@ CONFIG_BRIDGE_EBT_T_FILTER=m
 # CONFIG_BRIDGE_EBT_AMONG is not set
 # CONFIG_BRIDGE_EBT_ARP is not set
 # CONFIG_BRIDGE_EBT_IP is not set
+# CONFIG_BRIDGE_EBT_IP6 is not set
 # CONFIG_BRIDGE_EBT_LIMIT is not set
 # CONFIG_BRIDGE_EBT_MARK is not set
 # CONFIG_BRIDGE_EBT_PKTTYPE is not set
@@ -607,7 +648,6 @@ CONFIG_NET_SCH_DSMARK=m
 # CONFIG_NET_SCH_MQPRIO is not set
 # CONFIG_NET_SCH_CHOKE is not set
 # CONFIG_NET_SCH_QFQ is not set
-CONFIG_NET_SCH_INGRESS=m
 
 #
 # Classification
@@ -630,16 +670,7 @@ CONFIG_NET_EMATCH_NBYTE=m
 CONFIG_NET_EMATCH_U32=m
 # CONFIG_NET_EMATCH_META is not set
 # CONFIG_NET_EMATCH_TEXT is not set
-CONFIG_NET_CLS_ACT=y
-# CONFIG_NET_ACT_POLICE is not set
-# CONFIG_NET_ACT_GACT is not set
-# CONFIG_NET_ACT_MIRRED is not set
-# CONFIG_NET_ACT_IPT is not set
-# CONFIG_NET_ACT_NAT is not set
-# CONFIG_NET_ACT_PEDIT is not set
-# CONFIG_NET_ACT_SIMP is not set
-# CONFIG_NET_ACT_SKBEDIT is not set
-# CONFIG_NET_ACT_CSUM is not set
+# CONFIG_NET_CLS_ACT is not set
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
@@ -654,6 +685,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_IRDA is not set
 # CONFIG_BT is not set
 # CONFIG_AF_RXRPC is not set
+CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
@@ -661,7 +693,7 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 # CONFIG_CFG80211 is not set
-CONFIG_WIRELESS_EXT_SYSFS=y
+# CONFIG_WIRELESS_EXT_SYSFS is not set
 # CONFIG_LIB80211 is not set
 # CONFIG_LIB80211_CRYPT_WEP is not set
 # CONFIG_LIB80211_CRYPT_CCMP is not set
@@ -780,15 +812,16 @@ CONFIG_MTD_PHYSMAP_LEN=0x1000000
 # Ralink Flash Type support
 #
 CONFIG_MTD_RALINK=y
-CONFIG_MTD_NOR_RALINK=y
-# CONFIG_MTD_SPI_RALINK is not set
+# CONFIG_MTD_NOR_RALINK is not set
+CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
-CONFIG_RT2880_FLASH_8M=y
-# CONFIG_RT2880_FLASH_16M is not set
+# CONFIG_RT2880_FLASH_8M is not set
+CONFIG_RT2880_FLASH_16M=y
 CONFIG_MTD_PHYSMAP_BUSWIDTH=2
-CONFIG_RT2880_ROOTFS_IN_RAM=y
-# CONFIG_RT2880_ROOTFS_IN_FLASH is not set
+# CONFIG_RT2880_ROOTFS_IN_RAM is not set
+CONFIG_RT2880_ROOTFS_IN_FLASH=y
+CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_CPQ_DA is not set
@@ -806,7 +839,7 @@ CONFIG_BLK_DEV_LOOP=y
 # CONFIG_BLK_DEV_SX8 is not set
 # CONFIG_BLK_DEV_UB is not set
 CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_COUNT=16
+CONFIG_BLK_DEV_RAM_COUNT=1
 CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_BLK_DEV_XIP is not set
 # CONFIG_CDROM_PKTCDVD is not set
@@ -869,7 +902,6 @@ CONFIG_SCSI_WAIT_SCAN=m
 # CONFIG_FIREWIRE_NOSY is not set
 # CONFIG_I2O is not set
 CONFIG_NETDEVICES=y
-# CONFIG_IFB is not set
 # CONFIG_DUMMY is not set
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
@@ -879,30 +911,6 @@ CONFIG_TUN=y
 # CONFIG_ARCNET is not set
 CONFIG_MII=y
 # CONFIG_PHYLIB is not set
-
-#
-# PHY multiport switches
-#
-CONFIG_RTL8367=y
-CONFIG_RTL8367_API_8370=y
-# CONFIG_RTL8367_ASIC_R is not set
-CONFIG_RTL8367_ASIC_M=y
-# CONFIG_RTL8367_ASIC_RB is not set
-# CONFIG_RTL8367_ASIC_RVB is not set
-# CONFIG_RTL8367_ASIC_MB is not set
-# CONFIG_RTL8367_ASIC_MVB is not set
-CONFIG_RTL8367_SMI_BUS_CPU_GPIO_DATA=1
-CONFIG_RTL8367_SMI_BUS_CPU_GPIO_CLCK=2
-CONFIG_RTL8367_PORT_WAN=4
-CONFIG_RTL8367_PORT_LAN1=3
-CONFIG_RTL8367_PORT_LAN2=2
-CONFIG_RTL8367_PORT_LAN3=1
-CONFIG_RTL8367_PORT_LAN4=0
-# CONFIG_RTL8367_LAN_CPU_EXT0 is not set
-CONFIG_RTL8367_LAN_CPU_EXT1=y
-# CONFIG_RTL8367_USE_INIC_EXT is not set
-CONFIG_RTL8367_RGMII_DELAY_TX=1
-CONFIG_RTL8367_RGMII_DELAY_RX=1
 CONFIG_NET_ETHERNET=y
 # CONFIG_AX88796 is not set
 # CONFIG_HAPPYMEAL is not set
@@ -1332,20 +1340,14 @@ CONFIG_USB_DEVICE_CLASS=y
 # USB Host Controller Drivers
 #
 # CONFIG_USB_C67X00_HCD is not set
-# CONFIG_USB_XHCI_HCD is not set
-CONFIG_USB_EHCI_HCD=m
-CONFIG_RT3XXX_EHCI=y
-CONFIG_USB_EHCI_ROOT_HUB_TT=y
-CONFIG_USB_EHCI_TT_NEWSCHED=y
+CONFIG_USB_XHCI_HCD=m
+# CONFIG_USB_XHCI_HCD_DEBUGGING is not set
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1760_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
-CONFIG_USB_OHCI_HCD=m
-CONFIG_RT3XXX_OHCI=y
-# CONFIG_USB_OHCI_BIG_ENDIAN_DESC is not set
-# CONFIG_USB_OHCI_BIG_ENDIAN_MMIO is not set
-CONFIG_USB_OHCI_LITTLE_ENDIAN=y
+# CONFIG_USB_OHCI_HCD is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -1463,7 +1465,6 @@ CONFIG_USB_SERIAL_OPTION=m
 # CONFIG_USB_IDMOUSE is not set
 # CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_APPLEDISPLAY is not set
-# CONFIG_USB_SISUSBVGA is not set
 # CONFIG_USB_LD is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
 # CONFIG_USB_IOWARRIOR is not set
@@ -1584,7 +1585,12 @@ CONFIG_HFSPLUS_FS=m
 # CONFIG_JFFS2_FS is not set
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
-# CONFIG_SQUASHFS is not set
+CONFIG_SQUASHFS=y
+# CONFIG_SQUASHFS_XATTR is not set
+# CONFIG_SQUASHFS_LZO is not set
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_EMBEDDED=y
+CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=5
 # CONFIG_VXFS_FS is not set
 # CONFIG_MINIX_FS is not set
 # CONFIG_MINIX_FS_NATIVE_ENDIAN is not set
@@ -1713,7 +1719,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/ram0"
+CONFIG_CMDLINE="console=ttyS1,115200n8 root=/dev/mtdblock4 ro"
 # CONFIG_CMDLINE_OVERRIDE is not set
 # CONFIG_UBOOT_CMDLINE is not set
 
@@ -1842,9 +1848,16 @@ CONFIG_CRC16=y
 CONFIG_CRC32=y
 # CONFIG_CRC7 is not set
 # CONFIG_LIBCRC32C is not set
-# CONFIG_XZ_DEC is not set
+CONFIG_ZLIB_INFLATE=y
+CONFIG_XZ_DEC=y
+# CONFIG_XZ_DEC_X86 is not set
+# CONFIG_XZ_DEC_POWERPC is not set
+# CONFIG_XZ_DEC_IA64 is not set
+# CONFIG_XZ_DEC_ARM is not set
+# CONFIG_XZ_DEC_ARMTHUMB is not set
+# CONFIG_XZ_DEC_SPARC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_LZMA=y
+# CONFIG_XZ_DEC_TEST is not set
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=m
 CONFIG_TEXTSEARCH_BM=m
@@ -1859,44 +1872,60 @@ CONFIG_GENERIC_ATOMIC64=y
 #
 # Ralink Module
 #
-CONFIG_RT_FULL_DEVICE_NAME="ASUS RT-N56U"
 # CONFIG_RALINK_RDM is not set
+
+#
+# Ethernet PHY Giga-Switch
+#
+CONFIG_RTL8367=y
+CONFIG_RTL8367_API_8367B=y
+# CONFIG_RTL8367_ASIC_R is not set
+# CONFIG_RTL8367_ASIC_M is not set
+CONFIG_RTL8367_ASIC_RB=y
+# CONFIG_RTL8367_ASIC_RVB is not set
+# CONFIG_RTL8367_ASIC_MB is not set
+# CONFIG_RTL8367_ASIC_MVB is not set
+# CONFIG_RTL8367_CIF_SMI is not set
+CONFIG_RTL8367_CIF_MDIO=y
+CONFIG_RTL8367_PORT_WAN=0
+CONFIG_RTL8367_PORT_LAN1=4
+CONFIG_RTL8367_PORT_LAN2=3
+CONFIG_RTL8367_PORT_LAN3=2
+CONFIG_RTL8367_PORT_LAN4=1
+CONFIG_RTL8367_LAN_CPU_EXT1=y
+# CONFIG_RTL8367_LAN_CPU_EXT2 is not set
+CONFIG_RTL8367_USE_INIC_EXT=y
+CONFIG_RTL8367_RGMII_DELAY_TX=1
+CONFIG_RTL8367_RGMII_DELAY_RX=0
 
 #
 # Ethernet Ralink RT3xx/RT28xx wire driver
 #
 CONFIG_RAETH=y
-# CONFIG_RAETH_NAPI is not set
 CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RA_NETWORK_WORKQUEUE_BH is not set
-# CONFIG_RAETH_SKB_RECYCLE is not set
+# CONFIG_RAETH_NAPI is not set
 # CONFIG_RAETH_SKB_RECYCLE_2K is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
-# CONFIG_RAETH_HW_VLAN_TX is not set
+CONFIG_RAETH_HW_VLAN_TX=y
 # CONFIG_GE1_MII_FORCE_100 is not set
 # CONFIG_GE1_MII_AN is not set
 # CONFIG_GE1_RVMII_FORCE_100 is not set
 CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_RGMII_AN is not set
-CONFIG_RAETH_GMAC2=y
-# CONFIG_GE2_MII_FORCE_100 is not set
-# CONFIG_GE2_MII_AN is not set
-# CONFIG_GE2_RVMII_FORCE_100 is not set
-CONFIG_GE2_RGMII_FORCE_1000=y
-# CONFIG_GE2_RGMII_AN is not set
+# CONFIG_RAETH_GMAC2 is not set
 CONFIG_MAC_TO_MAC_MODE=y
 # CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 CONFIG_RAETH_DISABLE_TX_TIMEO=y
-CONFIG_RAETH_INIT_PROTECT=y
 
 #
 # Platform config for Ralink RT3xx/RT28xx/RT5xx
 #
-CONFIG_RALINK_RT3662_2T2R=y
-# CONFIG_RALINK_RT3883_3T3R is not set
+# CONFIG_RALINK_RT3662_2T2R is not set
+CONFIG_RALINK_RT3883_3T3R=y
 
 #
 # AP MODE Ralink RT3xx/RT28xx wireless driver
@@ -1920,7 +1949,7 @@ CONFIG_RT2860V2_AP_DLS=y
 # CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 # CONFIG_RT2860V2_AP_GREENAP is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-CONFIG_RT2860V2_AP_VIDEO_TURBINE=y
+# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 CONFIG_RT2860V2_AP_INTELLIGENT_RATE_ADAPTION=y
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
@@ -1935,29 +1964,17 @@ CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 #
 # AP MODE Ralink PCIe RT309X wireless driver
 #
-CONFIG_RT3090_AP=m
-CONFIG_RT3090_AP_LED=y
-# CONFIG_RT3090_AP_WSC is not set
-CONFIG_RT3090_AP_LLTD=y
-CONFIG_RT3090_AP_WDS=y
-# CONFIG_RT3090_AP_WMM_ACM is not set
-CONFIG_RT3090_AP_MBSS=y
-CONFIG_RT3090_AP_APCLI=y
-CONFIG_RT3090_AP_IGMP_SNOOP=y
-# CONFIG_RT3090_AP_NETIF_BLOCK is not set
-CONFIG_RT3090_AP_DLS=y
-CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT3090_AP_80211N_DRAFT3 is not set
-CONFIG_RT3090_AP_MCAST_RATE_SPECIFIC=y
-CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
-# CONFIG_RT3090_AP_BRIDGE_FASTPATH is not set
-# CONFIG_RT3090_AP_ATE is not set
-# CONFIG_RALINK_RT3090_AP_DBG is not set
+# CONFIG_RT3090_AP is not set
+
+#
+# AP MODE Ralink iNIC MII RT3352 wireless driver
+#
+CONFIG_RT3352_INIC_MII=m
+CONFIG_RT3352_INIC_AP=y
 
 #
 # NAT acell mode
 #
-# CONFIG_BCM_NAT is not set
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_RA_NAT_HW=y
 CONFIG_RA_HW_NAT=m
@@ -1987,7 +2004,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-# CONFIG_RA_HW_NAT_IPV6 is not set
+CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
@@ -1995,5 +2012,5 @@ CONFIG_RA_HW_NAT_WIFI=y
 #
 # Ralink Devices
 #
-CONFIG_RT3XXX_EHCI_OHCI=y
-CONFIG_RTDEV_PCI=y
+# CONFIG_RT3XXX_EHCI_OHCI is not set
+CONFIG_RTDEV_MII=y
