--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -4,10 +4,23 @@ USERDIR = $(ROOTDIR)/user
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(USERDIR)/libdisk -I$(USERDIR)/wireless_tools
 CFLAGS += -Wall -DTRANSLATE_ON_FLY
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
+CFLAGS += $(if $(CONFIG_RTL8367_API_8367B),-DUSE_RTL8367_API_8367B,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_NVRAM_NOCOMMIT),-DNVRAM_NOCOMMIT,)
 
 LDFLAGS  = -L$(SHDIR) -L$(USERDIR)/libdisk -L$(USERDIR)/wireless_tools
 LDFLAGS += -lm -lshared -ldisk -liw
+
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N56U")
+CFLAGS += -DBOARD_N56U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N65U")
+CFLAGS += -DBOARD_N65U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
+CFLAGS += -DBOARD_SWR1100
+endif
+
 ifeq ($(KERNEL3X),y)
 CFLAGS += -DUSE_KERNEL3X
 endif
