--- a/trunk/user/shared/Makefile
+++ b/trunk/user/shared/Makefile
@@ -1,6 +1,17 @@
 CFLAGS += -fPIC
 CFLAGS += -Wall -I. -I./include
+CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N56U")
+CFLAGS += -DBOARD_N56U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N65U")
+CFLAGS += -DBOARD_N65U
+endif
+ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"SWR1100")
+CFLAGS += -DBOARD_SWR1100
+endif
 
 LDFLAGS += -L.
 
